# kora

./: AGENTS.md  Cargo.toml  Justfile  README.md
.cursor/: mcp.json
.github/: ensure-cargo-deny.sh
.github/workflows/: ci.yml
assets/: demo.mov
crates/e2e/src/: harness.rs  lib.rs  setup.rs
crates/e2e/src/tests/: execution.rs
crates/network/marshal/: Cargo.toml
crates/network/marshal/src/: actor.rs  archive.rs  broadcast.rs  lib.rs  peers.rs
crates/network/marshal/tests/: integration.rs
crates/network/marshal/tests/common/: mod.rs
crates/network/transport/: README.md
crates/network/transport-sim/: Cargo.toml
crates/network/transport-sim/src/: channels.rs  context.rs  error.rs  lib.rs  provider.rs
crates/network/transport/src/: builder.rs  bundle.rs  channels.rs  config.rs  error.rs  ext.rs  lib.rs  network_provider.rs  provider.rs  transport.rs
crates/node/builder/src/: builder.rs  lib.rs
crates/node/config/src/: consensus.rs  error.rs  execution.rs  lib.rs  network.rs  rpc.rs
crates/node/consensus/: Cargo.toml
crates/node/consensus/src/: error.rs  execution.rs  ledger.rs  lib.rs  proposal.rs  traits.rs
crates/node/consensus/src/components/: mempool.rs  seed.rs  snapshot.rs
crates/node/dkg/: Cargo.toml  README.md
crates/node/dkg/src/: ceremony.rs  config.rs  error.rs  lib.rs  network.rs  output.rs  protocol.rs  state.rs  tests.rs  transport.rs
crates/node/domain/: Cargo.toml
crates/node/domain/src/: block.rs  bootstrap.rs  commitment.rs  events.rs  evm.rs  idents.rs  lib.rs  tx.rs
crates/node/executor/: Cargo.toml  README.md
crates/node/executor/src/: adapter.rs  config.rs  context.rs  error.rs  lib.rs  outcome.rs  revm.rs  traits.rs  validation.rs
crates/node/executor/tests/: executor.rs
crates/node/ledger/: Cargo.toml  README.md
crates/node/ledger/src/: lib.rs
crates/node/reporters/: Cargo.toml  README.md
crates/node/reporters/src/: lib.rs
crates/node/rpc/: Cargo.toml
crates/node/rpc/src/: config.rs  error.rs  eth.rs  indexed_provider.rs  kora.rs  lib.rs  server.rs  state.rs  state_provider.rs  types.rs
crates/node/runner/: Cargo.toml  README.md
crates/node/runner/src/: app.rs  lib.rs  runner.rs  scheme.rs
crates/node/service/: Cargo.toml
crates/node/service/src/: runner.rs  service.rs  stubs.rs  traits.rs
crates/node/simplex/src/: config.rs  engine.rs  lib.rs  pool.rs
crates/node/txpool/: Cargo.toml  README.md
crates/node/txpool/src/: config.rs  error.rs  lib.rs  ordering.rs  pool.rs  traits.rs  validator.rs
crates/primitives/: Cargo.toml  README.md
crates/primitives/src/: lib.rs
crates/storage/backend/src/: accounts.rs  backend.rs  code.rs  config.rs  error.rs  lib.rs  storage.rs  types.rs
crates/storage/handlers/src/: adapter.rs  error.rs  lib.rs  qmdb.rs  state.rs
crates/storage/indexer/: Cargo.toml  README.md
crates/storage/indexer/src/: error.rs  filter.rs  lib.rs  store.rs  types.rs
crates/storage/overlay/: Cargo.toml
crates/storage/overlay/src/: lib.rs  overlay.rs
crates/storage/qmdb-ledger/: Cargo.toml  README.md
crates/storage/qmdb-ledger/src/: ledger.rs  lib.rs
crates/storage/qmdb/src/: batch.rs  changes.rs  encoding.rs  error.rs  lib.rs  root.rs  store.rs
crates/storage/traits/src/: lib.rs
crates/utilities/cli/src/: lib.rs  sigsegv.rs
crates/utilities/crypto/: Cargo.toml  README.md
crates/utilities/crypto/src/: lib.rs  test_utils.rs
crates/utilities/sys/: Cargo.toml  README.md
crates/utilities/sys/src/: file_limit.rs  lib.rs
docker/: Justfile  README.md
docker/compose/: devnet.yaml
docker/scripts/: devnet-run.sh  devnet-stats.sh  entrypoint.sh
docs/: dkg-migration-plan.md
examples/revm/: Cargo.toml
examples/revm/src/: app.rs  chain.rs  cli.rs  demo.rs  environment.rs  lib.rs  main.rs  runner.rs  simulation.rs
examples/revm/src/application/: app.rs  execution.rs  handle.rs  mod.rs  observers.rs
examples/revm/src/application/ledger/: mempool.rs  mod.rs  seed_cache.rs  snapshot_store.rs
examples/revm/src/application/node/: channels.rs  config.rs  env.rs  marshal.rs  mod.rs  start.rs  transport.rs
examples/revm/src/application/reporters/: finalized.rs  seed.rs
examples/revm/src/domain/: commitment.rs  events.rs  mod.rs
examples/revm/src/domain/types/: block.rs  mod.rs  tests.rs  tx.rs
examples/revm/src/qmdb/: adapter.rs  changes.rs  config.rs  mod.rs  model.rs  service.rs  state.rs  store.rs  types.rs
examples/revm/src/simulation/: mod.rs
