[workspace]
members = ["bin/*", "crates/network/*", "crates/node/*", "crates/storage/*", "crates/utilities/*", "examples/*"]
default-members = ["bin/kora"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
repository = "https://github.com/refcell/kora"

[workspace.lints.rust]
missing-debug-implementations = "warn"
missing-docs = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
rust-2018-idioms = "deny"
unnameable-types = "warn"

[workspace.lints.rustdoc]
all = "warn"

[workspace.lints.clippy]
all = "warn"
missing-const-for-fn = "warn"
use-self = "warn"
option-if-let-else = "warn"
redundant-clone = "warn"

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "packed"
incremental = false

[profile.release]
opt-level = 3
lto = "thin"
debug = false
strip = "symbols"

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1

[workspace.dependencies]
# Local crates
kora-backend = { path = "crates/storage/backend" }
kora-cli = { path = "crates/utilities/cli" }
kora-config = { path = "crates/node/config" }
kora-consensus = { path = "crates/node/consensus" }
kora-executor = { path = "crates/node/executor" }
kora-service = { path = "crates/node/service" }
kora-transport = { path = "crates/network/transport" }
kora-handlers = { path = "crates/storage/handlers" }
kora-qmdb = { path = "crates/storage/qmdb" }
kora-traits = { path = "crates/storage/traits" }

# Commonware (path dependencies for local development with revm features)
commonware-broadcast = { path = "../commonware/broadcast" }
commonware-codec = { path = "../commonware/codec" }
commonware-consensus = { path = "../commonware/consensus" }
commonware-cryptography = { path = "../commonware/cryptography" }
commonware-macros = { path = "../commonware/macros" }
commonware-p2p = { path = "../commonware/p2p" }
commonware-parallel = { path = "../commonware/parallel" }
commonware-resolver = { path = "../commonware/resolver" }
commonware-runtime = { path = "../commonware/runtime" }
commonware-storage = { path = "../commonware/storage" }
commonware-stream = { path = "../commonware/stream" }
commonware-utils = { path = "../commonware/utils" }

# Alloy
alloy-primitives = "1.0"
alloy-consensus = { version = "1.0", features = ["k256"] }
alloy-eips = "1.0"
alloy-rlp = "0.3"

# Revm
revm = { version = "24", default-features = false, features = ["std"] }

# Async
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
eyre = "0.6"

# Misc
rand = "0.8"
rand_core = "0.6"
bytes = "1"
hex = "0.4"

# Testing
rstest = "0.24"
tempfile = "3"
