[package]
name = "kora-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core primitive types for the Kora execution client"

[dependencies]
alloy-primitives.workspace = true

[lints]
workspace = true
