[package]
name = "kora-revm-example"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "REVM-based example chain running on threshold-simplex (simplex + threshold BLS signatures)."

[lints]
workspace = true

[[bin]]
name = "kora-revm-example"
bench = false

[dependencies]
# Workspace
kora-config.workspace = true
kora-crypto = { workspace = true, features = ["test-utils"] }
kora-domain = { workspace = true, features = ["evm"] }
kora-consensus.workspace = true
kora-executor.workspace = true
kora-ledger.workspace = true
kora-marshal.workspace = true
kora-overlay.workspace = true
kora-reporters.workspace = true
kora-service.workspace = true
kora-simplex.workspace = true
kora-sys.workspace = true
kora-transport-sim.workspace = true

# Commonware
commonware-p2p.workspace = true
commonware-utils.workspace = true
commonware-runtime.workspace = true
commonware-parallel.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true

# General
rand.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
futures.workspace = true

# Execution
alloy-evm = { workspace = true, features = ["std"] }
alloy-consensus.workspace = true
alloy-primitives.workspace = true
k256.workspace = true
