[package]
name = "kora-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus application layer for Kora"

[dependencies]
# Local crates
kora-config = { path = "../config" }
kora-domain = { path = "../domain" }
kora-executor = { path = "../executor" }
kora-qmdb = { path = "../../storage/qmdb" }
kora-traits = { path = "../../storage/traits" }

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true

# Commonware
commonware-cryptography.workspace = true

# Synchronization
parking_lot.workspace = true

# Error handling
thiserror.workspace = true

# Async
futures.workspace = true

[dev-dependencies]
rstest = "0.24"
tokio = { workspace = true, features = ["rt", "macros"] }

[lints]
workspace = true
