[package]
name = "kora-dkg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Distributed Key Generation for Kora threshold cryptography"

[dependencies]
commonware-cryptography.workspace = true
commonware-codec.workspace = true
commonware-p2p.workspace = true
commonware-parallel.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand.workspace = true
rand_core.workspace = true
bytes.workspace = true
hex.workspace = true

[lints]
workspace = true
