[package]
name = "kora-executor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Block execution abstractions and REVM implementation for Kora"

[dependencies]
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
futures.workspace = true
kora-qmdb = { path = "../../storage/qmdb" }
kora-traits = { path = "../../storage/traits" }
revm.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt"] }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
