[package]
name = "kora-reporters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Consensus reporters for Kora nodes"

[lints]
workspace = true

[dependencies]
# Local crates
kora-consensus = { path = "../consensus" }
kora-domain = { path = "../domain" }
kora-executor = { path = "../executor" }
kora-indexer = { path = "../../storage/indexer" }
kora-ledger = { path = "../ledger" }
kora-overlay = { path = "../../storage/overlay" }
kora-qmdb-ledger = { path = "../../storage/qmdb-ledger" }
kora-rpc = { path = "../rpc" }

# Commonware
commonware-codec.workspace = true
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true

# Tracing
tracing.workspace = true
