[package]
name = "kora-service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Kora node service orchestration"

[lints]
workspace = true

[dependencies]
# Local crates
kora-config = { path = "../config" }
kora-transport = { path = "../../network/transport" }

# Commonware
commonware-consensus.workspace = true
commonware-cryptography.workspace = true
commonware-p2p.workspace = true
commonware-runtime.workspace = true
commonware-utils.workspace = true

# Async
futures.workspace = true

# Tracing
tracing.workspace = true

# Error handling
eyre.workspace = true
thiserror.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
