[package]
name = "kora-txpool"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Production-ready transaction pool for kora-node"

[lints]
workspace = true

[dependencies]
# Local crates
kora-domain = { path = "../domain", features = ["evm"] }
kora-traits = { path = "../../storage/traits" }

# Alloy
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

# Crypto
k256.workspace = true
sha3.workspace = true

# Concurrency
parking_lot.workspace = true

# Error handling
thiserror.workspace = true

# Tracing
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
rand.workspace = true
